Fixed covers on mini profile popups

--- a/src/themes/flylight.less
+++ b/src/themes/flylight.less
@@ -1613,3 +1613,7 @@ a.button:active { --bg-color: var(--selected) !important; }
 .hand-values .badge span {
   color: #ffffff !important;
 }
+
+.mini-profile-box .player-data {
+  background-color: #ffffff9c !important;
+}
